<resources>
    <string name="app_name">ZeroWaste</string>
    <string name="home">홈</string>
    <string name="mission">미션</string>
    <string name="community">커뮤니티</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_kakao">카카오로 로그인</string>

    <string name="exception_default">오류가 발생하였습니다\n%s</string>
    <string name="nick_name">닉네임</string>

    <string name="pledge">서약서</string>
    <string name="pledge_start">시작하기</string>
    <string name="pledge_page1_title">미션을 수행하며\n제로웨이스트 습관 찾기</string>
    <string name="pledge_page1_content">자신에게 맞는 레벨에서 요이 - 땅!\n각 레벨에 맞는 미션으로 습관을 바꿀 수 있어요 :)</string>
    <string name="pledge_page2_title">내가 만들어가는\n제로웨이스트 미션</string>
    <string name="pledge_page2_content">제로웨이스트를 실천하는 사람들을 위해\n좋은 미션 아이디어를 공유해주세요</string>
    <string name="pledge_page3_content">선서, 나는 꾸준히 미션을 진행하면서\n멋진 제로웨이스터가 될 것을 선서합니다!</string>
    <string name="pledge_sign">사인하기</string>
    <string name="pledge_nickname_duplicated">중복된 닉네임입니다</string>
    <string name="pledge_fail">실패하였습니다</string>

    <string name="kakao_login_fail">카카오 로그인에 실패하였습니다</string>
    <string name="server_login_fail">제로웨이스트 서버 로그인에 실패하였습니다</string>

    <string name="show_more">더보기</string>
    <string name="main_community_title">커뮤니티</string>
    <string name="main_community_list_experienced_difficulty">체감난이도</string>
    <string name="main_community_list_mission_complete_cnt">번 인증완료</string>

    <string name="mission_how_to">인증 방법</string>
    <string name="mission_do_level">레벨</string>
    <string name="mission_do_type">미션 유형</string>
    <string name="mission_do_place">수행 장소</string>
    <string name="mission_title">미션 제목</string>
    <string name="mission_place">장소 별 미션</string>
    <string name="main_mission_suggest">미션 공감 순위</string>
    <string name="main_mission_list">미션 리스트</string>
    <string name="main_mission_sub_title">장소별로 미션을 알려드려요</string>
    <string name="mission_count">회</string>
    <string name="mission_participate_count">명 참여중</string>
    <string name="mission_detail_approve">인증 완료</string>
    <string name="mission_detail_participate_users">명이 참가하고 있어요!</string>
    <string name="mission_detail_level_1">우쥬 용사가 되는 습관의 시작!</string>
    <string name="mission_detail_level_2">가볍게 실천할 수 있어요.</string>
    <string name="mission_detail_level_3">마음만 먹으면 충분히 할 수 있어요.</string>
    <string name="mission_detail_level_4">초심자에겐 어려울 수 있어요.</string>
    <string name="mission_detail_level_5">진정한 우쥬 용사가 되는 거에요!</string>
    <string name="mission_detail_approve_cnt">명의 용사들이 수행했어요.</string>
    <string name="mission_detail_how_to">이렇게 인증할 수 있어요</string>
    <string name="mission_detail_make_user">님이 만드신 미션이에요</string>
    <string name="mission_detail_start">미션 시작</string>
    <string name="mission_detail_start_participate">미션 인증</string>
    <string name="mission_detail_hero_start">미션에 참가한 우쥬용사들</string>
    <string name="mission_detail_all_heros">후기 전체보기</string>
    <string name="mission_detail_limit">미션 인증까지 %s 남았어요!</string>

    <string name="mission_approve">미션 수락 완료!</string>
    <string name="mission_approve_next_time">다음에 인증</string>
    <string name="mission_approve_immediately">바로 인증</string>
    <string name="mission_done">미션 인증 완료!</string>
    <string name="mission_done_msg">지구를 지킨 기쁜 소식을\n우쥬인들에게 자랑해 보세요!</string>
    <string name="mission_done_share">미션 인증 자랑</string>

    <string name="mission_cert_max_img">%s장까지만 선택할 수 있어요.</string>
    <string name="mission_cert_level_txt">미션 체감 난이도</string>
    <string name="mission_cert_after">미션 후기</string>
    <string name="mission_cert_after_hint">미션을 수행하면서 느낀점이 있으신가요?</string>

    <string name="mission_level_0_txt">매우 쉬움</string>
    <string name="mission_level_1_txt">쉬움</string>
    <string name="mission_level_2_txt">보통</string>
    <string name="mission_level_3_txt">어려움</string>
    <string name="mission_level_4_txt">매우 어려움</string>

    <string name="mission_level_0_script">왕초보자 (1일 내 수행)</string>
    <string name="mission_level_1_script">초보자 (3일 내 수행)</string>
    <string name="mission_level_2_script">초중급자 (5일 내 수행)</string>
    <string name="mission_level_3_script">중급자 (7일 내 수행)</string>
    <string name="mission_level_4_script">상급자 (14일 내 수행)</string>

    <string name="mission_suggest_phase1_title">어디서 할 수 있는 미션인가요?</string>
    <string name="mission_suggest_phase1_sub_title">미션을 수행할 수 있는 장소를 선택해 주세요.</string>
    <string name="mission_suggest_phase2_title">어떤 미션인가요?</string>
    <string name="mission_suggest_phase2_sub_title">20자 이내로 미션 제목을 정확하게 입력해 주세요.</string>
    <string name="mission_suggest_phase3_title">인증 방법을 설명해 주세요</string>
    <string name="mission_suggest_phase3_sub_title">인증 방법과 인증 예시 사진을 첨부해 주세요.</string>
    <string name="mission_suggest_phase3_photo">앨범 가져오기/사진 찍기</string>
    <string name="mission_suggest_phase3_photo_noti">* 미션 방법을 잘 나타내는 사진 1장만 첨부할 수 있습니다.\n* 미션 내용과 관련 없는 사진은 삭제될 수 있습니다.</string>
    <string name="mission_suggest_phase3_how_to">인증 방법 입력</string>
    <string name="mission_suggest_phase4_title">미션 난이도를 선택해 주세요</string>
    <string name="mission_suggest_phase4_sub_title">미션 난이도에 따라 수행 기간이 다를 수 있어요.</string>
    <string name="mission_suggest_phase5_title">5R 종류를 선택해 주세요</string>
    <string name="mission_suggest_phase5_sub_title">최대 3개까지 선택할 수 있어요.</string>
    <string name="mission_suggest_phase6_title">거의 다 왔어요! 마지막으로\n작성하신 내용을 확인해 주세요</string>
    <string name="mission_suggest_done">미션 제안 완료!</string>
    <string name="mission_suggest_cheer">응원의 한마디</string>
    <string name="mission_suggest_cheer_hint">우쥬용사들에게 응원의 한마디를 남겨보세요</string>

    <string name="empathy">공감</string>
    <string name="next">다음</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="date">일</string>
    <string name="choice">선택</string>
    <string name="before">이전</string>
    <string name="rank">등</string>

    <string name="theme_refuse">거절하기</string>
    <string name="theme_reduce">줄이기</string>
    <string name="theme_reuse">재사용</string>
    <string name="theme_recycle">재활용</string>
    <string name="theme_rot">썩히기</string>

    <string name="place_etc">기타</string>
    <string name="place_kitchen">주방</string>
    <string name="place_bathroom">욕실</string>
    <string name="place_cafe">카페</string>
    <string name="place_restaurant">식당</string>
    <string name="place_outside">실외</string>
    <string name="place_all">전체</string>

    <string name="sort">정렬</string>
    <string name="sort_recent">최신순</string>
    <string name="sort_popularity">인기순</string>
    <string name="sort_participation">참여순</string>

    <string name="finish_toast">한번 더 누르시면 종료됩니다.</string>
</resources>