<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mission_suggest_phase3_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/kotra_bold"
            android:textSize="22sp"
            android:text="@string/mission_suggest_phase3_title"
            android:layout_marginTop="12dp"
            android:layout_marginStart="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mission_suggest_phase3_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_1"
            android:textSize="15sp"
            android:text="@string/mission_suggest_phase3_sub_title"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@id/mission_suggest_phase3_title"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase3_title"/>

        <EditText
            android:id="@+id/mission_suggest_phase3_edit"
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:textCursorDrawable="@color/main_enabled"
            android:background="@drawable/selector_edittext"
            android:gravity="top"
            android:hint="@string/mission_suggest_phase3_how_to"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase3_sub_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mission_suggest_phase3_photo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/rect_round_stroke_gray3_8"
            android:layout_marginTop="12dp"
            android:textSize="15sp"
            android:textColor="@color/gray_0.5"
            android:text="@string/mission_suggest_phase3_photo"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase3_edit"
            app:layout_constraintStart_toStartOf="@id/mission_suggest_phase3_edit"
            app:layout_constraintEnd_toEndOf="@id/mission_suggest_phase3_edit"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/rect_round_8_gray5"
            android:layout_marginTop="24dp"
            android:textSize="13sp"
            android:textColor="@color/gray_1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/mission_suggest_phase3_photo_noti"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase3_photo"
            app:layout_constraintStart_toStartOf="@id/mission_suggest_phase3_edit"
            app:layout_constraintEnd_toEndOf="@id/mission_suggest_phase3_edit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>