<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pledge_phase3_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="78dp"
            android:fontFamily="@font/apple_sd_gothic_neo_b"
            android:text="@string/pledge"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pledge_phase3_tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="17dp"
            android:text="@string/pledge_page3_content"
            android:textColor="#8A8A8A"
            android:textSize="12sp"
            android:fontFamily="@font/apple_sd_gothic_neo_r"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pledge_phase3_tv_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pledge_phase3_tv_pledge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/apple_sd_gothic_neo_b"
            android:text="@string/pledge_sign"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pledge_phase3_tv_content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/pledge_phase3_et_pledge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/apple_sd_gothic_neo_b"
            android:hint="@string/nick_name"
            android:singleLine="true"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pledge_phase3_tv_pledge" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>