<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/mission_suggest_phase6_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/kotra_bold"
                android:textSize="22sp"
                android:text="@string/mission_suggest_phase6_title"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_type_back"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mission_suggest_phase6_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/gray_1"
                android:text="@string/mission_title"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_title"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_title"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_mission_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/real_black"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_title"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_name_txt"
                tools:text="수돗물 끓여 마시기"/>

            <View
                android:id="@+id/mission_suggest_phase6_type_back"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rect_round_8_gray5"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="-12dp"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_mission_name"
                app:layout_constraintBottom_toBottomOf="@id/mission_suggest_phase6_level_txt"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_place_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/gray_1"
                android:text="@string/mission_do_place"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@id/mission_suggest_phase6_type_back"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_type_back"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/real_black"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/mission_suggest_phase6_place_txt"
                app:layout_constraintTop_toTopOf="@id/mission_suggest_phase6_place_txt"
                app:layout_constraintBottom_toBottomOf="@id/mission_suggest_phase6_place_txt"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/gray_1"
                android:text="@string/mission_do_type"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_place_txt"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_place_txt" />

            <TextView
                android:id="@+id/mission_suggest_phase6_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/real_black"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_place"
                app:layout_constraintTop_toTopOf="@id/mission_suggest_phase6_type_txt"
                app:layout_constraintBottom_toBottomOf="@id/mission_suggest_phase6_type_txt"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_level_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/gray_1"
                android:text="@string/mission_do_level"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_type_txt"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_place_txt" />

            <TextView
                android:id="@+id/mission_suggest_phase6_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="@color/real_black"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_place"
                app:layout_constraintTop_toTopOf="@id/mission_suggest_phase6_level_txt"
                app:layout_constraintBottom_toBottomOf="@id/mission_suggest_phase6_level_txt"/>

            <TextView
                android:id="@+id/mission_suggest_phase6_howto_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/gray_1"
                android:text="@string/mission_how_to"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_type_back"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_type_back"/>

            <ImageView
                android:id="@+id/mission_suggest_phase6_howto_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHeight_max="300dp"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_howto_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/mission_suggest_phase6_howto_contents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:textColor="@color/gray_0.5"
                android:textSize="15sp"
                android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@id/mission_suggest_phase6_howto_img"
                app:layout_constraintStart_toStartOf="@id/mission_suggest_phase6_howto_img"
                app:layout_constraintEnd_toEndOf="@id/mission_suggest_phase6_howto_img"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>