<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/mission_suggest_done_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:fontFamily="@font/kotra_bold"
            android:text="@string/mission_suggest_done"
            android:layout_marginTop="24dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mission_suggest_done_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/mission_suggest_done_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_suggest_done_logo"
            android:scaleType="center"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_done_txt"
            app:layout_constraintBottom_toTopOf="@id/mission_suggest_cheer_txt"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/mission_suggest_cheer_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/roboto_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_done_img"
            app:layout_constraintBottom_toTopOf="@id/mission_suggest_cheer_edit"
            tools:text="응원의 한마디"/>

        <EditText
            android:id="@+id/mission_suggest_cheer_edit"
            android:theme="@style/suggestEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@color/main_enabled"
            android:maxLength="20"
            android:textColorHint="@color/gray_2"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:hint="@string/mission_suggest_cheer_hint"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_cheer_txt"
            app:layout_constraintBottom_toTopOf="@id/mission_suggest_done_info"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mission_suggest_done_info"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:text="내역보기가 무엇일까요?"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@drawable/selector_button"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toStartOf="@id/mission_suggest_done_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mission_suggest_cheer_edit"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mission_suggest_done_home"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:text="@string/home"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:background="@drawable/selector_button"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/mission_suggest_done_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/mission_suggest_done_info"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>